deployment/terraform/network.tf
resource "google_compute_firewall" "default" {
  name    = "default-firewall"
  project = google_project.project.project_id
  network = google_compute_network.default.name

  # HTTP and HTTPS
  allow {
    protocol = "tcp"
    ports    = ["80", "443"]
  }

  # SSH
  allow {
    protocol = "tcp"
    ports    = ["22"]
  }

  source_tags = ["web"]
}

resource "google_compute_network" "default" {
  name    = "default-network"
  project = google_project.project.project_id
}

resource "google_compute_address" "static" {
  name = "ipv4-address"
  project = google_project.project.project_id
  address_type = "EXTERNAL"
}
